--- a/index.html
+++ b/index.html
@@ -1,13 +1,21 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Learning stream</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto:400,300,500" rel="stylesheet" type="text/css">
-    <link rel="shortcut icon" href="favicon.ico">
-  <link rel="stylesheet" href="/styles.css"></head>
+      <title>Wombat - Home</title>
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+      <link href="styles/index.css" rel="stylesheet" />
+  </head>
   <body>
-    <div id="app"></div>
-    <script src="/bundle.js"></script>
+  <ul class="nav nav-tabs">
+    <li role="presentation" class="active"><a href="#">Home</a></li>
+    <li role="presentation"><a href="gallery.html">Gallery</a></li>
+  </ul>
+   <h1>Amazing wombat's world</h1>
+   <img src="./images/home.jpg" />
+  <div class="body-box">
+<h3>
+This is a site dedicated to Wombats and how furry and fantastic they are.
+Hope you enjoy our site, feel free to explore our gallery and upload your own images.
+</h3>
+</div>
   </body>
 </html>
