--- a/gallery.html
+++ b/gallery.html
@@ -2,20 +2,52 @@
   <head>
       <title>Wombat - Galary</title>
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-      <link href="/styles/index.css" rel="stylesheet" />
+      <link href="styles/index.css" rel="stylesheet" />
   </head>
   <body>
   <ul class="nav nav-tabs">
     <li role="presentation"><a href="index.html">Home</a></li>
-    <li role="presentation" class="active"><a href="/galary.html">Galary</a></li>
+    <li role="presentation" class="active"><a href="/gallery.html">Gallery</a></li>
   </ul>
-    <h1>Galary</h1>
+    <h1>Gallery</h1>
     <div class="body-box">
-      <img src="./images/images1.jpg" />
-      <img src="./images/images2.jpg" />
-      <img src="./images/images3.jpg" />
-      <img src="./images/images4.jpg" />
-      <img src="./images/images5.jpg" />
+      <div class="row">
+      <div class="col-sm-6 col-md-3">
+        <div class="thumbnail">
+          <a href="#"><img style="height: 350px; width: auto;" src="https://upload.wikimedia.org/wikipedia/commons/1/18/Vombatus_ursinus_-Maria_Island_National_Park.jpg" alt="A wombat in South Australia heads home after a long day of foraging."></a>
+          <div class="caption" style="height: 70px;">
+            <p>A wombat in South Australia heads home after a long day of foraging.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-6 col-md-3">
+        <div class="thumbnail">
+          <a href="#"><img style="height: 350px; width: auto;" src="http://media.thethousands.com.au/media/2013/08/14/07/47/09/996/3T_419_PatrickTheWombat_1.jpg" alt="Worlds biggest wombat."></a>
+          <div class="caption" style="height: 70px;">
+            <p>Worlds biggest wombat.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-6 col-md-3">
+        <div class="thumbnail">
+          <a href="#"><img style="height: 350px; width: auto;" src="http://www.abc.net.au/news/image/1649534-3x2-940x627.jpg" alt="A wombat poses for a photo in New South Wales."></a>          
+          <div class="caption" style="height: 70px;">
+            <p>A wombat poses for a photo in New South Wales.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-6 col-md-3">
+        <div class="thumbnail">
+          <a href="#"><img style="height: 350px; width: auto;" src="https://s-media-cache-ak0.pinimg.com/736x/f3/5e/48/f35e4885760fbaa4496123fde58e22a6.jpg" alt="Wombats in captivity generally become attached to their handlers."></a>
+          <div class="caption" style="height: 70px;">
+            <p>Wombats in captivity generally become attached to their handlers.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div>
+      Feel free to send us your favourite pictures of wombat at <a href="mailto:pictures@amazingwombats.net">pictures@amazingwombats.net</a>
+    </div>
     </div>
   </body>
 </html>
