--- a/gallery.html
+++ b/gallery.html
@@ -14,7 +14,7 @@
       <div class="row">
       <div class="col-sm-6 col-md-3">
         <div class="thumbnail">
-          <a href="#"><img style="height: 350px; width: auto;" src="https://upload.wikimedia.org/wikipedia/commons/1/18/Vombatus_ursinus_-Maria_Island_National_Park.jpg" alt="A wombat in South Australia heads home after a long day of foraging."></a>
+          <a href="figure1.html"><img style="height: 350px; width: auto;" src="https://upload.wikimedia.org/wikipedia/commons/1/18/Vombatus_ursinus_-Maria_Island_National_Park.jpg" alt="A wombat in South Australia heads home after a long day of foraging."></a>
           <div class="caption" style="height: 70px;">
             <p>A wombat in South Australia heads home after a long day of foraging.</p>
           </div>
@@ -22,7 +22,7 @@
       </div>
       <div class="col-sm-6 col-md-3">
         <div class="thumbnail">
-          <a href="#"><img style="height: 350px; width: auto;" src="http://media.thethousands.com.au/media/2013/08/14/07/47/09/996/3T_419_PatrickTheWombat_1.jpg" alt="Worlds biggest wombat."></a>
+          <a href="figure2.html"><img style="height: 350px; width: auto;" src="http://media.thethousands.com.au/media/2013/08/14/07/47/09/996/3T_419_PatrickTheWombat_1.jpg" alt="Worlds biggest wombat."></a>
           <div class="caption" style="height: 70px;">
             <p>Worlds biggest wombat.</p>
           </div>
@@ -30,7 +30,7 @@
       </div>
       <div class="col-sm-6 col-md-3">
         <div class="thumbnail">
-          <a href="#"><img style="height: 350px; width: auto;" src="http://www.abc.net.au/news/image/1649534-3x2-940x627.jpg" alt="A wombat poses for a photo in New South Wales."></a>          
+          <a href="figure3.html"><img style="height: 350px; width: auto;" src="http://www.abc.net.au/news/image/1649534-3x2-940x627.jpg" alt="A wombat poses for a photo in New South Wales."></a>          
           <div class="caption" style="height: 70px;">
             <p>A wombat poses for a photo in New South Wales.</p>
           </div>
@@ -38,7 +38,7 @@
       </div>
       <div class="col-sm-6 col-md-3">
         <div class="thumbnail">
-          <a href="#"><img style="height: 350px; width: auto;" src="https://s-media-cache-ak0.pinimg.com/736x/f3/5e/48/f35e4885760fbaa4496123fde58e22a6.jpg" alt="Wombats in captivity generally become attached to their handlers."></a>
+          <a href="figure4.html"><img style="height: 350px; width: auto;" src="https://s-media-cache-ak0.pinimg.com/736x/f3/5e/48/f35e4885760fbaa4496123fde58e22a6.jpg" alt="Wombats in captivity generally become attached to their handlers."></a>
           <div class="caption" style="height: 70px;">
             <p>Wombats in captivity generally become attached to their handlers.</p>
           </div>
